fixed some bugs with the restrictions.php and made fixed user permissions into the sql database, so more fun.

--- a/style/body.css
+++ b/style/body.css
@@ -2,7 +2,7 @@
 /* CSS Document */
 
 body{
-    background-image:url(img/operationrecolonize_wide.jpg);
+    background-image:url();
     background-color: #333333;
     background-repeat:repeat-y;
     background-position: top; 
