--- a/style/body.css
+++ b/style/body.css
@@ -2,9 +2,9 @@
 /* CSS Document */
 
 body{
-    background-image:url();
+    background-image:url(img/default.png);
     background-color: #333333;
-    background-repeat:repeat-y;
+    background-repeat: fixed no-repeat;
     background-position: top; 
     font-family:Arial, Helvetica, sans-serif;
     color:#FFF;
