--- a/style/body.css
+++ b/style/body.css
@@ -2,7 +2,7 @@
 /* CSS Document */
 
 body{
-    background-image:url(img/default.png);
+    background-image:url();
     background-color: #333333;
     background-repeat: fixed no-repeat;
     background-position: top; 
